--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,31 +1,49 @@
-* {
-	margin: 2%;
-}
-
-body {
+html,body {
 	font-family: verdana;
-	color: #FFF;
-	font-size: 180%;
-	background: #BBBBBB;
+	color: #7a003d;
+	font-size: 150%;
+	height: 98%;
+	margin: 0;
+	padding: 0;
 }
 
-a:link {color:#9BEA00;}
-a:visited {color:#8BD200;}
-a:active {color:#99FFDD;}
+a:link {color:#5769c5;}
+a:visited {color:#1e2366;}
+a:active {color:#ec2f5e;}
 
 h3 {
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 180%;
 }
 
+/*
 div {
 	background: #104EB2;
 	box-shadow: 0px 0px 5px rgba(0,0,0,.05);
 	border-radius: 0 20px 20px 20px;
 	width: 96%;
-
 }
-
 span.signature {
 	font-family: 'Lato', sans-serif;
+}
+*/
+#nav {
+	height: 10%;
+	/*margin: 0% 2% 0 2%;*/
+	top: 0;
+	left: 0;
+	width: 100%;
+	display: table;
+}
+.middle {
+  display: table-cell;
+  vertical-align: middle;
+}
+.title {
+	margin-left: 2%;
+	margin-right: auto;
+}
+#map {
+	height: 90%;
+	margin: 0 2% 0 2%;
 }
