Finshed product... as it is

--- a/views/indexMap.html
+++ b/views/indexMap.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="style/index.css" type="text/css" />
   <!-- app key below has to be left in the client side for map rendering -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIaT9xH4Wvg2vrAFXUOtoEP32Skxh1Mps&libraries=geometry&callback=initMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIaT9xH4Wvg2vrAFXUOtoEP32Skxh1Mps&libraries=geometry" async defer></script>
 </head>
 
 <body>
@@ -32,7 +32,6 @@
       });
     });
   </script>
-
 </body>
 
 </html>
