--- a/public/style/index.css
+++ b/public/style/index.css
@@ -16,17 +16,6 @@ h3 {
 	font-size: 180%;
 }
 
-/*
-div {
-	background: #104EB2;
-	box-shadow: 0px 0px 5px rgba(0,0,0,.05);
-	border-radius: 0 20px 20px 20px;
-	width: 96%;
-}
-span.signature {
-	font-family: 'Lato', sans-serif;
-}
-*/
 #nav {
 	height: 10%;
 	/*margin: 0% 2% 0 2%;*/
@@ -43,6 +32,12 @@ span.signature {
 	margin-left: 2%;
 	margin-right: auto;
 }
+.talkback {
+	font-family: verdana;
+	color: #7a003d;
+	font-size: 80%;
+}
+
 #map {
 	height: 90%;
 	margin: 0 2% 0 2%;
