--- a/views/indexMap.ejs
+++ b/views/indexMap.ejs
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="style/index.css" type="text/css" />
   <!-- app key below has to be left in the client side for map rendering -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIaT9xH4Wvg2vrAFXUOtoEP32Skxh1Mps&libraries=geometry&callback=initMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIaT9xH4Wvg2vrAFXUOtoEP32Skxh1Mps&libraries=geometry" async defer></script>
 </head>
 
 <body>
@@ -19,8 +19,7 @@
     <div class="middle">
       <div class="title">
         <a href="/"><img src="assets/logo.png"></a>
-        <button type="button" class="btn btn-outline-dark btn-sm" style="font-size:.7rem; margin-left:1em" data-toggle="modal" data-target="#twitterProfile">Profile</button><a class="btn btn-outline-danger btn-sm" style="font-size:.7rem; margin-left:1em"
-          href="/logout">Logout</a>
+        <button type="button" class="btn btn-outline-dark btn-sm" style="font-size:.7rem; margin-left:1em" data-toggle="modal" data-target="#locations">Route</button><a class="btn btn-outline-danger btn-sm" style="font-size:.7rem; margin-left:1em" href="/logout">Logout</a>
         <div style="font-size: 50%">Welcome back,
           <%= user.username %>!
         </div>
@@ -37,15 +36,15 @@
     });
   </script>
   <!-- Modal -->
-  <div id="twitterProfile" class="modal fade" role="dialog" style="font-size:50%;">
+  <div id="locations" class="modal fade" role="dialog" style="font-size:50%;">
     <div class="modal-dialog">
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Twitter Profile</h4>
+          <h4 class="modal-title">Distance Search</h4>
         </div>
         <div class="modal-body">
-          <% include ./profile %>
+          <% include locations %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
